# andyria

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  install.sh
.github/agents/: andyria-self-development.agent.md
.github/workflows/: ci.yml  public-pages.yml
deploy/: Dockerfile  self-install.sh
deploy/mcu/: flash.sh
deploy/mcu/arduino/andyria_node/: andyria_node.ino
deploy/presets/: agents.json
deploy/raspberry-pi/: config.yaml  deploy.sh
deploy/server/: config.yaml
docs/: architecture.md  blockchain-visualizer.html  index.html  install.sh  protocol.md  roadmap.md  sovereign-governance-baseline.md
docs/assets/: agents.manifest.json
python/: pyproject.toml  requirements-termux.txt  requirements.txt
python/andyria/: __init__.py  __main__.py  _dev.py  agent_features.py  api.py  atm.py  auto_learn.py  chain_labeler.py  chains.py  checkpoint.py  cli.py  connectors.py  context_compressor.py  context_files.py  coordinator.py  cron.py  dag.py  delegation.py  demo.py  fork_merge.py  gist_store.py  mcu_bridge.py  memory.py  mesh.py  models.py  node.py  orc.py  persistent_memory.py  persona.py  planner.py  projections.py  prompt_builder.py  promptbook.py  reasoning.py  registry.py  session_store.py  skills.py  slash_commands.py  soul.py  store.py  (+4 more)
python/andyria/entropy/: __init__.py  beacon.py  collectors.py  health.py  mcu_collector.py
python/andyria/static/: index.html  manage.html
python/tests/: __init__.py  test_api.py  test_coordinator.py  test_entropy.py  test_prompt_flows.py  test_tools.py
rust/: Cargo.toml
rust/crates/ledger/: Cargo.toml
rust/crates/ledger/src/: crypto.rs  entropy.rs  event.rs  lib.rs  store.rs
rust/crates/runtime/: Cargo.toml
rust/crates/runtime/src/: hardware.rs  lib.rs  profile.rs
schemas/: events.json
tt-live-agent/: .gitignore  agent.js  config.json  package-lock.json  package.json
tt-live-agent/agents/: chat-commander.json  greeter.json  hype-bot.json  jina-wizard.json  sales-sniper.json
tt-live-agent/core/: conversational.js  dag.js  db.js  identity.js  intent.js  liveState.js  llm.js  metrics.js  ndjson.js  openclaw.js  orchestrator.js  persona.js  priorityQueue.js  router.js  skillLoader.js  sleeper.js  sleepscreen.js  usecasefinder.js  voice.js
tt-live-agent/personas/: creator.json  default.json  hypegirl.json  jina.json  sniper.json
tt-live-agent/skills/: game.js  greet.js  hype.js  jina.js  revenue.js  sales.js  shoutout.js
tt-live-agent/static/: sleep.html
(+1 files in other folders)
