[workspace]
members = [
    "crates/ledger",
    "crates/runtime",
]
resolver = "2"

[workspace.dependencies]
serde       = { version = "1",    features = ["derive"] }
serde_json  = "1"
blake3      = "1"
ed25519-dalek = { version = "2",  features = ["rand_core"] }
rand_core   = { version = "0.6",  features = ["std"] }
thiserror   = "1"
hex         = "0.4"
sha3        = "0.10"
